--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ h1 {
   line-height: 28px;
   margin-bottom: 0;
 }
+
 ul {
   margin: 0;
   padding: 0;
@@ -30,6 +31,7 @@ li {
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
+  background: linear-gradient(to top, #dfe9f3 0%, white 100%);
 }
 .overview {
   margin-bottom: 20px;
@@ -51,5 +53,12 @@ li {
   top: -34px;
 }
 a {
+  text-decoration: none;
+}
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+.weather-temperature .active:hover {
   text-decoration: none;
 }
